2015-04-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r22215.

	* src/openvassd.c (loading_handler_start): Set global socket as
	nonblocking. Periodically check that parent is still alive.
	(reload_openvassd, main): Check loading_handler_start() return value.
	Reported by Miguel Angel Cabrera.

2015-03-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 4.0.7.

2015-03-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 4.0.6 release.

	* CHANGES: Updated.

2015-02-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport a part of r21584.

	* src/attack.c (attack_host): Update host scanning status, when finished
	or terminated.

2014-11-27  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 4.0.6.

2014-11-27  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 4.0.5 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Raise required libopenvas version to 7.0.6.

	* INSTALL: Update version requirements.

2014-11-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/openvavssd.c (reload_openvavssd): Free the nvti cache before
	reinitializing the plugins.

2014-11-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 4.0.5.

2014-11-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 4.0.4 release.

	* CHANGES: Updated.

2014-10-30  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r20689 by Jan-Oliver Wagner.

	* src/ntp.c (ntp_read_prefs): Increase size of buffer for
	preferences to allow for upto 69K NVTs.

2014-09-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r20338.

	* src/comm.c (send_plug_info), src/hosts.c (forward, hosts_set_pid),
	src/ntp.c (ntp_read_prefs), src/openvassd.c (init_ssl_ctx, init_network)